--- a/liveplayer-sdk-ui/src/main/res/values/colors.xml
+++ b/liveplayer-sdk-ui/src/main/res/values/colors.xml
@@ -51,6 +51,7 @@
 
     <color name="color_BA4E2B">#BA4E2B</color>
     <color name="color_00000000">#000000</color>
+    <color name="color_9C9C9C">#9C9C9C</color>
     <color name="color_FF455A">#FF455A</color>
     <color name="color_1EB0FF">#1EB0FF</color>
     <color name="color_7F7F88">#7F7F88</color>
