--- a/liveplayer-sdk-ui/src/main/res/drawable/shape_announcement_edit_etbg.xml
+++ b/liveplayer-sdk-ui/src/main/res/drawable/shape_announcement_edit_etbg.xml
@@ -4,6 +4,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="#cccccc"/>
+        android:color="#c9c9c9"/>
     <corners android:radius="3dp"/>
 </shape>
