--- a/liveplayer-sdk-ui/src/main/res/layout/dialog_online_users.xml
+++ b/liveplayer-sdk-ui/src/main/res/layout/dialog_online_users.xml
@@ -2,11 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
     android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/dialog_online_user_recycler_view"
+    <ExpandableListView
+        android:id="@+id/elv_online_group"
+        android:groupIndicator="@null"
+        android:divider="@null"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+    </ExpandableListView>
 
 </LinearLayout>
