--- a/liveplayer-sdk-ui/src/main/res/layout/fragment_announcement_edit.xml
+++ b/liveplayer-sdk-ui/src/main/res/layout/fragment_announcement_edit.xml
@@ -61,12 +61,13 @@
             android:maxLines="1"
             android:textSize="12sp"
             android:inputType="text"
+            android:paddingLeft="5dp"
             android:hint="@string/string_notice_url_hint"
-            android:textColor="@color/color_00000000"
+            android:textColor="@color/color_9C9C9C"
             android:layout_height="match_parent" />
 
         <TextView
-            android:textColor="@color/color_00000000"
+            android:textColor="@color/color_9C9C9C"
             android:textSize="12sp"
             android:gravity="center_vertical"
             android:text="@string/live_optional_input"
@@ -84,7 +85,7 @@
         android:gravity="center"
         android:textSize="16sp"
         android:text="@string/string_notice_cancel_edit"
-        android:textColor="@color/color_00000000"
+        android:textColor="@color/color_9C9C9C"
         android:background="@drawable/layer_ffffff_5"
         android:layout_width="match_parent"
         android:layout_height="35dp"
