--- a/liveplayer-sdk-ui/src/main/res/layout/dialog_question_tool.xml
+++ b/liveplayer-sdk-ui/src/main/res/layout/dialog_question_tool.xml
@@ -1,61 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/dialog_question_tool_container"
     android:layout_width="224dp"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:background="@drawable/bg_dialog_question"
     android:gravity="center_horizontal"
-    android:background="@color/live_white"
-    android:id="@+id/dialog_question_tool_container"
-    >
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/dialog_base_title_container"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:background="@color/live_blue"
-        android:paddingLeft="@dimen/activity_live_room_dialog_margin">
+        android:background="@drawable/bg_dialog_question_title"
+        android:paddingLeft="12dp">
 
         <TextView
             android:id="@+id/dialog_base_title"
             style="@style/LiveTextTitle"
+            android:layout_centerVertical="true"
             android:text="答题器"
-            android:textColor="@color/live_white"
-            android:layout_centerVertical="true" />
+            android:textColor="@color/live_white" />
 
         <LinearLayout
-            android:id="@+id/dialog_cross"
+            android:id="@+id/dialog_close"
             android:layout_width="30dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true">
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="9dp"
                 android:layout_height="9dp"
-                android:src="@drawable/ic_fork"
-                />
+                android:src="@drawable/ic_fork" />
         </LinearLayout>
 
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/dialog_question_tool_countDown_layout"
-        android:layout_marginTop="6dp"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"
         android:layout_width="match_parent"
         android:layout_height="28dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginRight="12dp"
+        android:background="#FAFAFA"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:background="#FAFAFA">
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:layout_marginLeft="7dp"
             android:text="@string/live_room_question_tool_countDown"
-            android:textColor="@color/live_grey_question_tool"
-            />
+            android:textColor="@color/live_grey_question_tool" />
 
         <View
             android:layout_width="0dp"
@@ -64,76 +64,40 @@
 
         <TextView
             android:id="@+id/dialog_question_tool_countDown"
-            android:layout_marginTop="6dp"
-            android:layout_marginRight="7dp"
-            android:gravity="right"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:textColor="@color/live_grey_question_tool"/>
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:textColor="@color/live_grey_question_tool" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/dialog_question_tool_options"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
-        </LinearLayout>
+        android:gravity="center_horizontal"
+        android:orientation="vertical" />
+
     <TextView
         android:id="@+id/dialog_question_tool_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
         android:layout_marginTop="7dp"
+        android:layout_marginRight="12dp"
         android:gravity="center"
-        android:visibility="gone"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"
-        android:textSize="12sp"
         android:textColor="@color/live_grey_question_tool"
-        />
-    <LinearLayout
-        android:id="@+id/dialog_question_tool_answer"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"
-        android:layout_width="match_parent"
-        android:layout_height="28dp"
-        android:orientation="horizontal"
-        android:background="#FAFAFA"
-        android:visibility="gone">
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="7dp"
-            android:layout_marginTop="7dp"
-            android:text="@string/live_room_question_tool_rightAnswer"
-            android:textColor="@color/live_grey_question_tool"
-            />
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <TextView
-            android:id="@+id/dialog_question_tool_answer_text"
-            android:layout_marginRight="7dp"
-            android:layout_marginTop="7dp"
-            android:gravity="right"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:textColor="@color/live_grey_question_tool"/>
-    </LinearLayout>
+        android:textSize="12sp"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/dialog_btn_submit"
-        android:layout_width="61.2dp"
-        android:layout_height="27.2dp"
-        android:textColor="@color/live_white"
-        android:background="@color/live_blue"
-        android:text="@string/live_room_question_tool_submit"
+        android:layout_width="62dp"
+        android:layout_height="28dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="14dp"
         android:layout_marginBottom="20dp"
-        android:layout_gravity="center_horizontal"
-        android:textSize="12sp"
-        />
-
+        android:background="@color/live_blue"
+        android:text="@string/live_room_question_tool_submit"
+        android:textColor="@color/live_white"
+        android:textSize="12sp" />
 </LinearLayout>
