--- a/liveplayer-sdk-ui/src/main/res/layout/fragment_leftmenu.xml
+++ b/liveplayer-sdk-ui/src/main/res/layout/fragment_leftmenu.xml
@@ -23,6 +23,7 @@
         android:id="@+id/fragment_left_menu_question_answer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/activity_live_room_margin"
         android:visibility="gone"
         android:src="@drawable/live_ic_question_answer_normal"
         />
@@ -31,6 +32,7 @@
         android:id="@+id/fragment_left_menu_remarks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/activity_live_room_margin"
         android:visibility="gone"
         android:src="@drawable/iv_ui_remarks_show"
         />
