--- a/liveplayer-sdk-ui/src/main/res/values/colors.xml
+++ b/liveplayer-sdk-ui/src/main/res/values/colors.xml
@@ -57,4 +57,5 @@
     <color name="color_7F7F88">#7F7F88</color>
     <color name="color_FF6059">#FF6059</color>
     <color name="color_C6C6CF">#C6C6CF</color>
+    <color name="color_686F81">#686F81</color>
 </resources>
