--- a/liveplayer-sdk-ui/src/main/res/layouts/pad/layout/fragment_pad_interactive.xml
+++ b/liveplayer-sdk-ui/src/main/res/layouts/pad/layout/fragment_pad_interactive.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
+    <com.baijiayun.live.ui.base.ViewPagerWrapper
         android:id="@+id/user_chat_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content" />
 
         </android.support.design.widget.TabLayout>
-    </android.support.v4.view.ViewPager>
+    </com.baijiayun.live.ui.base.ViewPagerWrapper>
 
 
     <com.baijiayun.live.ui.widget.DragResizeFrameLayout
