--- a/liveplayer-sdk-ui/src/main/res/layouts/pad/layout/item_pad_chat_text.xml
+++ b/liveplayer-sdk-ui/src/main/res/layouts/pad/layout/item_pad_chat_text.xml
@@ -2,7 +2,7 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
+    <com.baijiayun.live.ui.chat.widget.ChatMessageView
         android:id="@+id/chat_message_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -11,8 +11,6 @@
         android:paddingTop="@dimen/chat_item_text_content_padding_top"
         android:paddingEnd="@dimen/chat_item_text_content_padding_start"
         android:paddingBottom="@dimen/chat_item_text_content_padding_top"
-        android:textColor="#ff4a4a4a"
-        android:textSize="@dimen/common_text_size"
         tools:background="@drawable/item_pad_chat_text_bg"
         tools:text="有人觉得三天的时间出国是天方夜谭，我却觉得不是。" />
 
