--- a/liveplayer-sdk-ui/src/main/res/values/dimens.xml
+++ b/liveplayer-sdk-ui/src/main/res/values/dimens.xml
@@ -17,6 +17,8 @@
     <dimen name="main_video_height">108dp</dimen>
     <dimen name="main_video_width">192dp</dimen>
 
+    <dimen name="main_video_menu_width">160dp</dimen>
+
     <dimen name="main_video_single_height">144dp</dimen>
     <dimen name="main_video_single_width">192dp</dimen>
 
@@ -56,7 +58,7 @@
     <dimen name="chat_item_text_content_padding_top">3dp</dimen>
     <dimen name="chat_message_reminder_padding">5dp</dimen>
 
-    <dimen name="tab_item_red_point_width">10dp</dimen>
+    <dimen name="tab_item_red_point_width">12dp</dimen>
     <dimen name="tab_item_red_point_margin_start">8dp</dimen>
     <dimen name="tab_item_red_point_margin_bottom">4dp</dimen>
 </resources>
